final rough draft

--- a/index.html
+++ b/index.html
@@ -1,7 +1,70 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="jrbrosstylesheet.css">
+    <title>A2F SD JR BROS</title>
+  </head>
+  <body>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Welcome to the A2F San Diego Junior Brother Profiles</h1>
+      </div>
+    </div>
+
+    <div id="sidebarL">
+
+    </div>
+    <div id="sidebarR">
+
+    </div>
+    <div class="container">
+
+    <div class="row">
+      <div class="col-md-4">
+        <h3 class="profile">Andrew Jabasa</h3>
+        <div class="thumbnail">
+          <img src="img/andrew1.jpg"/>
+        </div>
+        <ul class="details">
+          <li class="fn">Full Name: Andrew Paul Mazon Jabasa</li>
+          <li>Sassmaster (level 9021)</li>
+          <li>Strong Calves</li>
+          <li>Drives a 95 Nissan Maxima</li>
+          <li>Resides in International Gardens Apartment 1716</li>
+          <li>Does not do black coffee</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3 class="profile">Robert Day</h3>
+        <div class="thumbnail">
+          <img src="img/robert1.jpg"/>
+        </div>
+        <ul class="details">
+          <li class="fn">Full Name: Robert Raphael Day</li>
+          <li>Yo-yo Master</li>
+          <li>Proficient in Latin</li>
+          <li>Drives a stick shift pickup truck (unknown model)</li>
+          <li>Resides in International Gardens Apartment 326</li>
+          <li>Does not get high fives from Andrew Jabasa</li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h3 class="profile">John Casabar</h3>
+        <div class="thumbnail">
+          <img src="img/john1.jpg"/>
+        </div>
+        <ul class="details">
+          <li class="fn">Full Name: John Christian ??? Casabar</li>
+          <li>Master of Trickery</li>
+          <li>Powerful Fashion</li>
+          <li>Rides a plastic pony (see image)</li>
+          <li>Resides in La Scala Apartment ??? (I forget your guys' apt number)</li>
+          <li>Also known as "Kim Chi"</li>
+        </ul>
+      </div>
+    </div>
+    </div>
+  </body>
 </html>
