--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         </ul>
       </div>
     </div>
+
+    <h3>Interesting links:</h3>
+    <p>
+      <a href="https://goo.gl/V0TFLT">The quotebook</a>
+    </p>
+
     </div>
   </body>
 </html>
