--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <li>Drives a 95 Nissan Maxima</li>
           <li>Resides in International Gardens Apartment 1716</li>
           <li>Does not do black coffee</li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>"I love studying."</li>
+              <li>"Do you wanna die?"</li>
+              <li>"No, you can't eat cookies Paulo."</li>
+            </ul>
         </ul>
       </div>
       <div class="col-md-4">
@@ -48,6 +54,12 @@
           <li>Drives a stick shift pickup truck (unknown model)</li>
           <li>Resides in International Gardens Apartment 326</li>
           <li>Does not get high fives from Andrew Jabasa</li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>"We should feed our children garbage."</li>
+              <li>"We could also do mail fraud."</li>
+              <li>"Aaauughhh!" (and falls on the ground when Kirk scares him)</li>
+            </ul>
         </ul>
       </div>
       <div class="col-md-4">
@@ -62,6 +74,10 @@
           <li>Rides a plastic pony (see image)</li>
           <li>Resides in La Scala Apartment ??? (I forget your guys' apt number)</li>
           <li>Also known as "Kim Chi"</li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>"Nose Goes!"</li>
+            </ul>
         </ul>
       </div>
     </div>
