--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     </div>
     <div class="container">
-
+      <!-- Row 1 /-->
     <div class="row">
       <div class="col-md-4">
         <h3 class="profile">Andrew Jabasa</h3>
@@ -68,25 +68,121 @@
           <img src="img/john1.jpg"/>
         </div>
         <ul class="details">
-          <li class="fn">Full Name: John Christian ??? Casabar</li>
+          <li class="fn">Full Name: John Christian Gamurot Casabar</li>
           <li>Master of Trickery</li>
           <li>Powerful Fashion</li>
           <li>Rides a plastic pony (see image)</li>
-          <li>Resides in La Scala Apartment ??? (I forget your guys' apt number)</li>
+          <li>Resides in La Scala 3425</li>
           <li>Also known as "Kim Chi"</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
               <li>"Nose Goes!"</li>
+              <li>"COCO!"</li>
+              <li></li>
             </ul>
+        </ul>
+      </div>
+    </div>
+    <!-- End Row 1, Begin Row 2 /-->
+    <div class="row">
+      <div class="col-md-4">
+        <h3 class="profile">Albert Fan</h3>
+        <div class="thumbnail">
+          <img src="img/albert1.jpg"/>
+        </div>
+        <ul class="details">
+          <li class="fn">Full Name: 樊国斌</li>
+          <li>Master of Genetics</li>
+          <li>Always willing to help people</li>
+          <li>Drives Andrew crazy</li>
+          <li>Resides in International Gardens 326</li>
+          <li>Must apologize to Andrew daily</li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>"I'm sorry Andrew."</li>
+              <li>"Whaa?"</li>
+              <li>"I want to change my name to A2F."</li>
+              <li>Many, many others</li>
+            </ul>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h3 class="profile">David Nobles</h3>
+        <div class="thumbnail">
+          <img src=""/>
+        </div>
+        <ul class="details">
+          <li class="fn">David Robert Nobles</li>
+          <li>Master of the Outdoors</li>
+          <li>Fights bears[citation needed]</li>
+          <li>Drives a Blue Ford Explorer</li>
+          <li>Resides in La Scala 3230</li>
+          <li></li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>"Oh we know! Bible Study! I love Bible Study. Bible Study, Bible Study"</li>
+              <li>"To my left, your right *Insert UCSD fact here*"</li>
+            </ul>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h3 class="profile">Eric Han</h3>
+        <div class="thumbnail">
+          <img src=""/>
+        </div>
+        <ul class="details">
+          <li class="fn">Yoon Ho Han</li>
+          <li>Master of Music</li>
+          <li>Tall and Korean</li>
+          <li>Drives a Toyota</li>
+          <li>Resides in La Scala 3230</li>
+          <li>Cannot take sweet foods</li>
+          <li>Interesting Quotes:</li>
+            <ul class="quotes">
+              <li>*Music Symbol*"Music Lyrics"</li>
+            </ul>
+        </ul>
+      </div>
+    </div>
+    <!-- End Row 2, Begin Row 3 /-->
+    <div class="row">
+      <div class="col-md-4">
+        <h3 class="profile">Kyle Holmquist</h3>
+        <div class="thumbnail">
+          <img src=""/>
+        </div>
+        <ul class="details">
+          <li class="fn"></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h3 class="profile">Jack Zhang</h3>
+        <div class="thumbnail">
+          <img src=""/>
+        </div>
+        <ul class="details">
+          <li class="fn"></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h3 class="profile">Mark Hwang</h3>
+        <div class="thumbnail">
+          <img src=""/>
+        </div>
+        <ul class="details">
+          <li class="fn"></li>
         </ul>
       </div>
     </div>
 
     <h3>Interesting links:</h3>
-    <p>
+    <p class="link">
       <a href="https://goo.gl/V0TFLT">The quotebook</a>
     </p>
-
     </div>
   </body>
 </html>
