Added Eric and David

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
       <div class="col-md-4">
         <h3 class="profile">David Nobles</h3>
         <div class="thumbnail">
-          <img src=""/>
+          <img src="img/david1.jpg"/>
         </div>
         <ul class="details">
           <li class="fn">David Robert Nobles</li>
           <li>Master of the Outdoors</li>
           <li>Fights bears[citation needed]</li>
-          <li>Drives a Blue Ford Explorer</li>
+          <li>Drives a Blue Ford Escape</li>
           <li>Resides in La Scala 3230</li>
           <li></li>
           <li>Interesting Quotes:</li>
@@ -124,13 +124,14 @@
               <li>"Oh we know! Bible Study! I love Bible Study. Bible Study, Bible Study"</li>
               <li>"To my left, your right *Insert UCSD fact here*"</li>
             </ul>
+          <li>Not a quote but one time he was explaining something, and then Kirk farted, and then David began to repeat himself because he thought Kirk asked, "What?"</li>
         </ul>
       </div>
 
       <div class="col-md-4">
         <h3 class="profile">Eric Han</h3>
         <div class="thumbnail">
-          <img src=""/>
+          <img src="img/eric1.jpg"/>
         </div>
         <ul class="details">
           <li class="fn">Yoon Ho Han</li>
@@ -141,7 +142,8 @@
           <li>Cannot take sweet foods</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
-              <li>*Music Symbol*"Music Lyrics"</li>
+              <li>"♪Hey won't you look my way, Oh I will be there for you in your toughest days♪"</li>
+              <li>"♪With tears in my eyes and my heart in two, I wrote this song for you♪"</li>
             </ul>
         </ul>
       </div>
