Fixed unfilled detail about David

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <li>Fights bears[citation needed]</li>
           <li>Drives a Blue Ford Escape</li>
           <li>Resides in La Scala 3230</li>
-          <li></li>
+          <li>Prone to minor snowboarding injuries</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
               <li>"Oh we know! Bible Study! I love Bible Study. Bible Study, Bible Study"</li>
