Added "Full Name:" to David and Eric's profiles

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <img src="img/david1.jpg"/>
         </div>
         <ul class="details">
-          <li class="fn">David Robert Nobles</li>
+          <li class="fn">Full Name: David Robert Nobles</li>
           <li>Master of the Outdoors</li>
           <li>Fights bears[citation needed]</li>
           <li>Drives a Blue Ford Escape</li>
@@ -134,7 +134,7 @@
           <img src="img/eric1.jpg"/>
         </div>
         <ul class="details">
-          <li class="fn">Yoon Ho Han</li>
+          <li class="fn">Full Name: Yoon Ho Han</li>
           <li>Master of Music</li>
           <li>Tall and Korean</li>
           <li>Drives a Toyota</li>
