--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li>Sassmaster (level 9021)</li>
           <li>Strong Calves</li>
           <li>Drives a 95 Nissan Maxima</li>
-          <li>Resides in International Gardens Apartment 1716</li>
+          <li>Resides in Apartment 1716</li>
           <li>Does not do black coffee</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
@@ -52,7 +52,7 @@
           <li>Yo-yo Master</li>
           <li>Proficient in Latin</li>
           <li>Drives a stick shift pickup truck (unknown model)</li>
-          <li>Resides in International Gardens Apartment 326</li>
+          <li>Resides in Apartment 326</li>
           <li>Does not get high fives from Andrew Jabasa</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
@@ -72,7 +72,7 @@
           <li>Master of Trickery</li>
           <li>Powerful Fashion</li>
           <li>Rides a plastic pony (see image)</li>
-          <li>Resides in La Scala 3425</li>
+          <li>Resides in Apartment 3425</li>
           <li>Also known as "Kim Chi"</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
@@ -95,7 +95,7 @@
           <li>Master of Genetics</li>
           <li>Always willing to help people</li>
           <li>Drives Andrew crazy</li>
-          <li>Resides in International Gardens 326</li>
+          <li>Resides in Apartment 326</li>
           <li>Must apologize to Andrew daily</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
@@ -117,7 +117,7 @@
           <li>Master of the Outdoors</li>
           <li>Fights bears[citation needed]</li>
           <li>Drives a Blue Ford Escape</li>
-          <li>Resides in La Scala 3230</li>
+          <li>Resides in Apartment 3230</li>
           <li>Prone to minor snowboarding injuries</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
@@ -138,7 +138,7 @@
           <li>Master of Music</li>
           <li>Tall and Korean</li>
           <li>Drives a Toyota</li>
-          <li>Resides in La Scala 3230</li>
+          <li>Resides in Apartment 3230</li>
           <li>Cannot take sweet foods</li>
           <li>Interesting Quotes:</li>
             <ul class="quotes">
