--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>QUINTON GROUNDS!!!</h1>
-    <a href="https://www.facebook.com/quinton.grounds?fref=ts"><img src="https://scontent.xx.fbcdn.net/v/t1.0-9/11986409_1075320395819182_5219924439234103284_n.jpg?oh=b1a1c6e6e172e9413661aefc482110dd&oe=57E4E2A5"/></a>
+    <a href="https://www.facebook.com/quinton.grounds?fref=ts"><img src="public/img/quinton1.jpg"/></a>
   </body>
 </html>
