updated and cleaned

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <img src="img/me3.jpg" style="height: 75%; width: 75%" alt="About Us Big Image" class="center-block img-responsive">
+                        <img src="img/me3.jpg" style="height: 65%; width: 65%" alt="About Us Big Image" class="center-block img-responsive">
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <p class="margin-bottom-medium wow slideInUp">I'm spending my last year in UC San Diego after coming in as an Electrical Engineering major.
+                <p class="margin-bottom-medium wow slideInUp">I'm a senior in UC San Diego after coming in as an Electrical Engineering major.
                   I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Human-Computer
                   Interaction and Front-End Development. For this last year, I am also interested in learning about Artificial Intelligence from both the
                   Cognitive Science and Computer Science departments.
@@ -187,17 +187,6 @@
                   Military history, but I also like anything military related. I love soccer, and I'm an avid fan of Liverpool FC and the German Football team.
                   I also highly enjoy tennis, volleyball, and table tennis. Recently I've been working on photography as well, and my landing page background is a photo I took!
                 </p>
-                <div class="row margin-top-large">
-                    <div class="col-md-4">
-                        <img src="img/me4.jpg" style="height: 400px;" class="center-block img-responsive"/>
-                    </div> <!-- *** end col-md-8 *** -->
-                    <div class="col-md-4">
-                        <img src="img/me5.jpg" class="center-block img-responsive"/>
-                    </div> <!-- *** end col-md-8 *** -->
-                    <div class="col-md-4">
-                        <img src="img/soccer1.jpg" class="center-block img-responsive" alt="Case Study">
-                    </div>
-                </div>
             </div>
         </div>
     </section> <!-- *** end About Us *** -->
@@ -291,7 +280,7 @@
                             <div class="wrapper"><span data-width="90"></span></div>
                         </li>
                         <li>
-                            <p>Javascript - AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
+                            <p>Javascript - React/Redux, AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
                             <div class="wrapper"><span data-width="80"></span></div>
                         </li>
                         <li>
@@ -315,13 +304,17 @@
                 <!-- *****  Service Single ***** -->
                 <div class="col-md-4">
                     <div class="service wow slideInLeft">
-                      <h3>Some other technologies and languages that I'm currently exploring: </h3>
+                      <h3>Other tools and technologies that I use and learning about</h3>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>ReactJS</strong></h4>
+                        <h4><strong>Vim</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Atom</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>GDB</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Adobe Premiere Pro</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Python</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>PHP</strong></h4>
                     </div>
                 </div>
 
@@ -504,13 +497,13 @@
             </div> <!-- *** end  portfolio-item *** -->
         </div> <!-- *** end  portfolio-wrapper *** -->
         <!-- a href="" after more projects can be added! -->
-        <class="button light margin-top-medium margin-bottom-medium hvr-grow"><i class="icon-reload"></i> Load More</a>
+        <!-- <class="button light margin-top-medium margin-bottom-medium hvr-grow"><i class="icon-reload"></i> Load More</a> -->
     </section> <!-- *** end Portfolio *** -->
 
     <!-- =========================
        Contact
     ============================== -->
-    <section id="send-message" class="send-message main-bg white-color text-center">
+    <section class="send-message main-bg white-color text-center">
         <div class="send-icon">
             <i class="fa fa-paper-plane"></i>
         </div>
@@ -526,7 +519,7 @@
        Footer
     ============================== -->
     <footer id="footer" class="footer">
-        <div class="container padding-large text-center">
+        <!-- <div class="container padding-large text-center">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <figure class="margin-bottom-medium">
@@ -536,7 +529,7 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
     </footer> <!-- *** end Footer *** -->
 
     <!-- =========================
