--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <p class="margin-bottom-medium wow slideInUp">I'm a senior in UC San Diego after coming in as an Electrical Engineering major.
                   I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Human-Computer
-                  Interaction and Front-End Development. For this last year, I am also interested in learning about Artificial Intelligence from both the
+                  Interaction and Front-End Development. For this last year, I am also interested in learning about Data Mining from both the
                   Cognitive Science and Computer Science departments.
                 </p>
                 <p class="margin-bottom-medium wow slideInUp">I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
@@ -292,7 +292,11 @@
                             <div class="wrapper"><span data-width="70"></span></div>
                         </li>
                         <li>
-                            <p>SQL - MongoDB, PostgreSQL</p>
+                            <p>SQL - PostgreSQL</p>
+                            <div class="wrapper"><span data-width="40"></span></div>
+                        </li>
+                        <li>
+                            <p>NoSQL - MongoDB</p>
                             <div class="wrapper"><span data-width="40"></span></div>
                         </li>
                     </ul>
@@ -313,6 +317,8 @@
                         <h4><strong>GDB</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Adobe Premiere Pro</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Adobe Photoshop</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Python</strong></h4>
                     </div>
@@ -337,9 +343,9 @@
 
                 <div class="col-md-10 col-md-offset-1">
                     <div class="subtitle">These consist of Web Applications and stand-alone Programs</div>
-                    <p>Currently I only have a couple of side projects, but I will surely have more soon!</p>
                     <p>
-                      Check out my Github @ Github.com/Koshinryo
+                      To prevent violations of UCSD's academic integrity policies, I will not link any of the Java or C++
+                      projects. I will try to have them run in this site someday. Check out my Github @ Github.com/Koshinryo
                     </p>
                 </div>
             </div> <!-- *** end row *** -->
@@ -416,13 +422,16 @@
             ============================== -->
             <div class="portfolio-item print">
                <div class="portfolio">
-                  <a href="https://github.com/Koshinryo/myprojects/tree/master/Actor-Graphs" data-lightbox-gallery="portfolio">
+                  <a data-lightbox-gallery="portfolio">
                     <img src="img/projects/actor1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Actor Graphs</strong>
                         </h2>
-                        <div class="button">View Project</div>
+                        <div><p>Using Hash tables, Heaps, and Trees, I made a GUI-less version of the game
+                          "Six Degrees of Kevin Bacon". It makes a graph data structure that uses Movie actors
+                          as vertices and films as edges.
+                        </p></div>
                     </div><!-- END PORTFOLIO OVERLAY -->
                   </a>
                </div>
@@ -433,13 +442,17 @@
             ============================== -->
             <div class="portfolio-item ui">
                <div class="portfolio">
-                  <a href="https://github.com/Koshinryo/myprojects/tree/master/Autocomplete%2BSpellcheck" data-lightbox-gallery="portfolio">
+                  <a data-lightbox-gallery="portfolio">
                     <img src="img/projects/autocomp1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Autocomplete</strong>
                         </h2>
-                        <div class="button">View Project</div>
+                        <p>
+                          Using Multiway Tries, Priority Queues, and Stacks, I was able to make my own
+                          AutoComplete program that is prominent in every search service. It uses
+                          Depth First Search to predict word and phrase completions.
+                        </p>
                     </div><!-- END PORTFOLIO OVERLAY -->
                   </a>
                </div>
@@ -450,13 +463,16 @@
             ============================== -->
             <div class="portfolio-item web-design">
                <div class="portfolio">
-                  <a href="https://github.com/Koshinryo/myprojects/tree/master/Huffman-Encoding%2BDecoding" data-lightbox-gallery="portfolio">
+                  <a data-lightbox-gallery="portfolio">
                     <img src="img/projects/huffman1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Huffman Compression</strong>
                         </h2>
-                        <div class="button">View Project</div>
+                        <p>
+                          Using Priority Queues and Tries, I was able to emulate the Huffman Compression
+                          algorithm to compress and decompress files.
+                        </p>
                     </div><!-- END PORTFOLIO OVERLAY -->
                   </a>
                </div>
@@ -467,13 +483,16 @@
             ============================== -->
             <div class="portfolio-item web-design">
                <div class="portfolio">
-                  <a href="https://github.com/Koshinryo/myprojects/tree/master/Tetris-incomplete" data-lightbox-gallery="portfolio">
+                  <a data-lightbox-gallery="portfolio">
                     <img src="img/projects/tetris1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Tetris</strong>
                         </h2>
-                        <div class="button">View Project</div>
+                        <p>
+                          I was able to make my own Tetris video game using the Java GUI and multi-threading.
+                          It performs basic game operations, but also has a high score system and a menu.
+                        </p>
                     </div><!-- END PORTFOLIO OVERLAY -->
                   </a>
                </div>
