added skills etc

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="carousel-caption">
                         <h1 class="light mab-none">Hello, My name is <strong class="bold-text">Paulo</strong>!</h1>
                         <h1 class="light margin-bottom-medium mat-none"><strong class="bold-text">Welcome</strong> to my website!</h1>
-                        <p class="light margin-bottom-medium">Fourth Year student, Prospective Front-End Developer</p>
+                        <p class="light margin-bottom-medium">Fourth Year student, Prospective Full Stack Developer</p>
                         <div class="call-button">
                             <div class="row">
                                 <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
@@ -314,6 +314,10 @@
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Atom</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Balsamiq Mockups (Lo-Fidelity Prototyping)</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Invision (Hi-Fidelity Prototyping)</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>GDB</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Adobe Premiere Pro</strong></h4>
@@ -321,6 +325,8 @@
                         <h4><strong>Adobe Photoshop</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Python</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Ruby</strong></h4>
                     </div>
                 </div>
 
