--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SITE TITLE -->
-    <title>Hello and Welcome!</title>
+    <title>Paulo Gonzales</title>
 
     <!-- =========================
        Title icon
@@ -168,7 +168,7 @@
                 <div class="row margin-bottom-medium">
                     <div class="col-md-7">
                         <div class="jumbo-text light-text margin-top-medium wow slideInLeft" data-wow-duration="2s">
-                            Student, <strong class="bold-text">Software Developer</strong> and Designer
+                            Student, <strong class="bold-text">Software Developer</strong> and Builder
                         </div>
                     </div>
                     <div class="col-md-5">
@@ -176,16 +176,16 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <p class="margin-bottom-medium wow slideInUp">I'm a senior in UC San Diego after coming in as an Electrical Engineering major.
-                  I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Human-Computer
-                  Interaction and Front-End Development. For this last year, I am also interested in learning about Data Mining from both the
-                  Cognitive Science and Computer Science departments.
+                <p class="margin-bottom-medium wow slideInUp">I'm currently a senior in UC San Diego and I was an Electrical Engineering major for my first two years as a student.
+                  I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Front-End Development
+                  while also learning Full Stack practices. So for this last year I've been taking classes on database and other back-end applications. I love building things,
+                  which is why I initially chose to become an electrical engineer, but I eventually found building software (usually web applications) as my real calling!
                 </p>
                 <p class="margin-bottom-medium wow slideInUp">I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
                   I lived there for 5 years, moving to New Jersey for half a year, and finally settling in Ventura County here in California. Some of my hobbies include
                   reading, cooking, and sports. I like to read various genres and among my favorite authors are J.R.R Tolkien and C.S. Lewis. I like studying History, especially
-                  Military history, but I also like anything military related. I love soccer, and I'm an avid fan of Liverpool FC and the German Football team.
-                  I also highly enjoy tennis, volleyball, and table tennis. Recently I've been working on photography as well, and my landing page background is a photo I took!
+                  Military history, but I also like anything military related (tanks, planes, and warships!). I love soccer and I'm an avid fan of Liverpool FC (thanks to Klopp!).
+                  I also highly enjoy tennis, table tennis, and volleyball. Recently I've been working on photography as well, and my landing page background is a photo I took in Monterey Bay!
                 </p>
             </div>
         </div>
@@ -199,7 +199,7 @@
         <div class="container margin-top-large">
             <h2>
                 My
-                <span class="light-text main-color">Designer Skills</span>
+                <span class="light-text main-color">User Experience Skills</span>
             </h2>
             <div class="line main-bg margin-bottom-large"></div>
 
@@ -269,35 +269,36 @@
         <div class="container padding-top-large">
             <h2>
                 My
-                <span class="light-text main-color">Software Skills</span>
+                <span class="light-text main-color">Software Technology Proficiencies</span>
             </h2>
             <div class="line main-bg margin-bottom-medium"></div>
             <div class="row">
                 <div class="col-md-7">
+                    <h3>Programming Languages</h3>
                     <ul class="skill-bar">
                         <li>
-                            <p>HTML/CSS - Bootstrap</p>
+                            <p>HTML/CSS - Bootstrap, Sass</p>
                             <div class="wrapper"><span data-width="90"></span></div>
                         </li>
                         <li>
-                            <p>Javascript - React/Redux, AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
-                            <div class="wrapper"><span data-width="80"></span></div>
+                            <p>Javascript - ES2015, React/Redux, AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
+                            <div class="wrapper"><span data-width="90"></span></div>
+                        </li>
+                        <li>
+                            <p>Databases - SQLite3, PostgreSQL, MongoDB</p>
+                            <div class="wrapper"><span data-width="60"></span></div>
+                        </li>
+                        <li>
+                            <p>Java - JDBC, Advanced Data Structures</p>
+                            <div class="wrapper"><span data-width="60"></span></div>
                         </li>
                         <li>
                             <p>C/C++ - Advanced Data Structures</p>
-                            <div class="wrapper"><span data-width="70"></span></div>
+                            <div class="wrapper"><span data-width="50"></span></div>
                         </li>
                         <li>
-                            <p>Java - Advanced Data Structures</p>
-                            <div class="wrapper"><span data-width="70"></span></div>
-                        </li>
-                        <li>
-                            <p>SQL - PostgreSQL</p>
-                            <div class="wrapper"><span data-width="40"></span></div>
-                        </li>
-                        <li>
-                            <p>NoSQL - MongoDB</p>
-                            <div class="wrapper"><span data-width="40"></span></div>
+                            <p>PHP</p>
+                            <div class="wrapper"><span data-width="30"></span></div>
                         </li>
                     </ul>
                 </div>
@@ -307,26 +308,24 @@
 
                 <!-- *****  Service Single ***** -->
                 <div class="col-md-4">
-                    <div class="service wow slideInLeft">
-                      <h3>Other tools and technologies that I use and learning about</h3>
+                    <div class="service wow slideInRight">
+                      <h3>Tools and Technologies</h3>
+                        <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Git</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Vim</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Atom</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
+                        <h4><strong>Google Chrome DevTools</strong></h4>
+                        <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Balsamiq Mockups (Lo-Fidelity Prototyping)</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Invision (Hi-Fidelity Prototyping)</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>GDB</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Adobe Premiere Pro</strong></h4>
                         <div class="icon"><i class="icon-idea"></i></div>
                         <h4><strong>Adobe Photoshop</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Python</strong></h4>
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>Ruby</strong></h4>
                     </div>
                 </div>
 
@@ -381,8 +380,9 @@
                         <img src="img/projects/slh1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                         <div class="portfolio-overlay hvr-rectangle-out">
                             <h2 class="margin-bottom-small">
-                                <strong class="white-color bold-text">Student Leader Headquarters</strong>
+                                <strong class="white-color bold-text">Peer Page</strong>
                             </h2>
+                            <h5 style="color: red;"><strong>Currently Outdated and Under Construction</strong></h5>
                             <div class="button">View Project</div>
                         </div><!-- END PORTFOLIO OVERLAY -->
                     </a>
@@ -426,6 +426,23 @@
             <!-- =========================
                Portfolio item
             ============================== -->
+            <div class="portfolio-item icon">
+               <div class="portfolio">
+                  <a href="img/projects/bible-timeline-init.png" data-lightbox-gallery="portfolio">
+                    <img src="img/projects/bible-timeline-init.png" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
+                    <div class="portfolio-overlay hvr-rectangle-out">
+                        <h2 class="margin-bottom-small">
+                            (TBA) <strong class="white-color bold-text">Bible Timeline</strong>
+                        </h2>
+                        <div class="button">View Project</div>
+                    </div><!-- END PORTFOLIO OVERLAY -->
+                  </a>
+               </div>
+            </div> <!-- *** end  portfolio-item *** -->
+
+            <!-- =========================
+               Portfolio item
+            ============================== -->
             <div class="portfolio-item print">
                <div class="portfolio">
                   <a data-lightbox-gallery="portfolio">
@@ -434,7 +451,7 @@
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Actor Graphs</strong>
                         </h2>
-                        <div><p>Using Hash tables, Heaps, and Trees, I made a GUI-less version of the game
+                        <div><p style="color: black;">Using Hash tables, Heaps, and Trees, I made a GUI-less version of the game
                           "Six Degrees of Kevin Bacon". It makes a graph data structure that uses Movie actors
                           as vertices and films as edges.
                         </p></div>
@@ -454,7 +471,7 @@
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Autocomplete</strong>
                         </h2>
-                        <p>
+                        <p style="color: black;">
                           Using Multiway Tries, Priority Queues, and Stacks, I was able to make my own
                           AutoComplete program that is prominent in every search service. It uses
                           Depth First Search to predict word and phrase completions.
@@ -475,7 +492,7 @@
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Huffman Compression</strong>
                         </h2>
-                        <p>
+                        <p style="color: black;">
                           Using Priority Queues and Tries, I was able to emulate the Huffman Compression
                           algorithm to compress and decompress files.
                         </p>
@@ -495,7 +512,7 @@
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">Tetris</strong>
                         </h2>
-                        <p>
+                        <p style="color: black;">
                           I was able to make my own Tetris video game using the Java GUI and multi-threading.
                           It performs basic game operations, but also has a high score system and a menu.
                         </p>
@@ -504,22 +521,6 @@
                </div>
             </div> <!-- *** end  portfolio-item *** -->
 
-            <!-- =========================
-               Portfolio item
-            ============================== -->
-            <div class="portfolio-item icon">
-               <div class="portfolio">
-                  <a href="img/projects/react_comingsoon.jpg" data-lightbox-gallery="portfolio">
-                    <img src="img/projects/react_comingsoon.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
-                    <div class="portfolio-overlay hvr-rectangle-out">
-                        <h2 class="margin-bottom-small">
-                            (TBA) <strong class="white-color bold-text">Apartment Finances</strong>
-                        </h2>
-                        <div class="button">View Project</div>
-                    </div><!-- END PORTFOLIO OVERLAY -->
-                  </a>
-               </div>
-            </div> <!-- *** end  portfolio-item *** -->
         </div> <!-- *** end  portfolio-wrapper *** -->
         <!-- a href="" after more projects can be added! -->
         <!-- <class="button light margin-top-medium margin-bottom-medium hvr-grow"><i class="icon-reload"></i> Load More</a> -->
@@ -532,6 +533,9 @@
         <div class="send-icon">
             <i class="fa fa-paper-plane"></i>
         </div>
+        <h4>Links: </h4>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/paulo-gonzales">linkedin.com/in/paulo-gonzales</a></p>
+        <p>Codepen: <a href="http://codepen.io/paulog/">codepen.io/paulog</a></p>
         <p> Email Me at <span class="bold-text">gonzales.paulo19@gmail.com</span> </p>
         <p>
           Or Call <span class="bold-text">(805)766-9613</span>
@@ -544,17 +548,7 @@
        Footer
     ============================== -->
     <footer id="footer" class="footer">
-        <!-- <div class="container padding-large text-center">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <figure class="margin-bottom-medium">
-                        <img src="img/logo.png" class="footer-logo" alt="Krefolio">
-                    </figure>
-                    <p class="margin-bottom-medium">Powered by the KreFolio template, thank you!</p>
 
-                </div>
-            </div>
-        </div> -->
     </footer> <!-- *** end Footer *** -->
 
     <!-- =========================
