--- a/index.html
+++ b/index.html
@@ -81,14 +81,11 @@
             <li data-rel="#about-us">
                 <span class="nav-label">About Me</span>
             </li>
+            <li data-rel="#our-skills">
+                <span class="nav-label">Technical Skills</span>
+            </li>
             <li data-rel="#portfolio">
                 <span class="nav-label">My Projects</span>
-            </li>
-            <!-- <li data-rel="#our-team">
-                <span class="nav-label">Coursework</span>
-            </li> -->
-            <li data-rel="#why-choose-us">
-                <span class="nav-label">Technical Skills</span>
             </li>
             <li data-rel="#send-message">
                 <span class="nav-label">Contact Me</span>
@@ -134,7 +131,7 @@
                     <div class="carousel-caption">
                         <h1 class="light mab-none">Hello, My name is <strong class="bold-text">Paulo</strong>!</h1>
                         <h1 class="light margin-bottom-medium mat-none"><strong class="bold-text">Welcome</strong> to my website!</h1>
-                        <p class="light margin-bottom-medium">Fourth Year student, Prospective Full Stack Developer</p>
+                        <p class="light margin-bottom-medium">New Graduate, Prospective Web Developer</p>
                         <div class="call-button">
                             <div class="row">
                                 <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
@@ -168,7 +165,7 @@
                 <div class="row margin-bottom-medium">
                     <div class="col-md-7">
                         <div class="jumbo-text light-text margin-top-medium wow slideInLeft" data-wow-duration="2s">
-                            Student, <strong class="bold-text">Software Developer</strong> and Builder
+                            <strong class="bold-text">Software Developer</strong> and Systems Builder
                         </div>
                     </div>
                     <div class="col-md-5">
@@ -176,91 +173,21 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <p class="margin-bottom-medium wow slideInUp">I'm currently a senior in UC San Diego and I was an Electrical Engineering major for my first two years as a student.
+                <p class="margin-bottom-medium wow slideInUp">I'm currently a new graduate from UC San Diego and I was an Electrical Engineering major for my first two years as a student.
                   I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Front-End Development
-                  while also learning Full Stack practices. So for this last year I've been taking classes on database and other back-end applications. I love building things,
-                  which is why I initially chose to become an electrical engineer, but I eventually found building software (usually web applications) as my real calling!
+                  while also learning Full Stack practices. So for this last year I've been taking classes on database and other back-end applications. I love building systems,
+                  which is why I initially chose to become an electrical engineer, but I eventually found building software (usually web applications) as my real calling! I also
+                  enjoy Data Science, particularly Recommender Systems.
                 </p>
                 <p class="margin-bottom-medium wow slideInUp">I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
                   I lived there for 5 years, moving to New Jersey for half a year, and finally settling in Ventura County here in California. Some of my hobbies include
-                  reading, cooking, and sports. I like to read various genres and among my favorite authors are J.R.R Tolkien and C.S. Lewis. I like studying History, especially
-                  Military history, but I also like anything military related (tanks, planes, and warships!). I love soccer and I'm an avid fan of Liverpool FC (thanks to Klopp!).
-                  I also highly enjoy tennis, table tennis, and volleyball. Recently I've been working on photography as well, and my landing page background is a photo I took in Monterey Bay!
+                  reading, cooking, and sports. I like to read various genres and among my favorite author is J.R.R Tolkien (huge LOTR fan!). I like studying History, especially
+                  Military history, but I also like anything military related (tanks, planes, and warships!). I love soccer and I'm an avid fan of Liverpool FC.
+                  I also highly enjoy tennis, table tennis, and volleyball. Recently I've been working on photography as well, and my landing page background is a photo I took in Monterey Bay, California!
                 </p>
             </div>
         </div>
     </section> <!-- *** end About Us *** -->
-
-
-    <!-- =========================
-       Technical Skills
-    ============================== -->
-    <section id="why-choose-us" class="why-choose-us">
-        <div class="container margin-top-large">
-            <h2>
-                My
-                <span class="light-text main-color">User Experience Skills</span>
-            </h2>
-            <div class="line main-bg margin-bottom-large"></div>
-
-            <div class="row text-center">
-
-                <!-- *****  Service Single ***** -->
-                <div class="col-md-4">
-                    <div class="service wow slideInLeft">
-                        <div class="icon"><i class="icon-idea"></i></div>
-                        <h4><strong>User Needfinding</strong></h4>
-                        <p>Search for application user needs through getting to know them!</p>
-                    </div>
-                </div>
-
-                <!-- *****  Service Single ***** -->
-                <div class="col-md-4">
-                    <div class="service wow fadeInUp">
-                        <div class="icon"><i class="icon-heart"></i></div>
-                        <h4><strong>Cognition</strong> Applications</h4>
-                        <p>Apply cognitive studies to designs to best manipulate designs for the user</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="service wow slideInRight">
-                        <div class="icon"><i class="icon-office"></i></div>
-                        <h4><strong>Rapid </strong>Prototyping</h4>
-                        <p>Create paper prototypes of applications for speed and cost efficiency</p>
-                    </div>
-                </div>
-
-                <!-- *****  Service Single ***** -->
-                <div class="col-md-4">
-                    <div class="service wow slideInLeft">
-                        <div class="icon"><i class="icon-mobile"></i></div>
-                        <h4>Lo and Hi <strong>Fidelity</strong> Prototypes</h4>
-                        <p>Using Balsamiq and Invision, I make early drafts of web applications before actual coding begins</p>
-                    </div>
-                </div>
-
-                <!-- *****  Service Single ***** -->
-                <div class="col-md-4">
-                    <div class="service wow fadeInUp">
-                        <div class="icon"><i class="icon-code"></i></div>
-                        <h4><strong>Heuristic</strong> Evaluations</h4>
-                        <p>Make use of Nielsen's heuristics to test prototypes and applications for design flaws</p>
-                    </div>
-                </div>
-
-                <!-- *****  Service Single ***** -->
-                <div class="col-md-4">
-                    <div class="service wow slideInRight">
-                        <div class="icon"><i class="icon-web-browser"></i></div>
-                        <h4><strong>A/B</strong> Testing</h4>
-                        <p>Using Google Analytics, I perform user tests of web applications akin to actual lab experiments</p>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div> <!-- *** end row *** -->
-        </div> <!-- *** end container *** -->
-    </section> <!-- *** end Why Choose Us *** -->
-
 
     <!-- =========================
        Our Skills
@@ -269,7 +196,7 @@
         <div class="container padding-top-large">
             <h2>
                 My
-                <span class="light-text main-color">Software Technology Proficiencies</span>
+                <span class="light-text main-color">Software Skills</span>
             </h2>
             <div class="line main-bg margin-bottom-medium"></div>
             <div class="row">
@@ -277,7 +204,7 @@
                     <h3>Programming Languages</h3>
                     <ul class="skill-bar">
                         <li>
-                            <p>HTML/CSS - Bootstrap, Sass</p>
+                            <p>HTML/CSS - Bootstrap</p>
                             <div class="wrapper"><span data-width="90"></span></div>
                         </li>
                         <li>
@@ -289,16 +216,20 @@
                             <div class="wrapper"><span data-width="60"></span></div>
                         </li>
                         <li>
-                            <p>Java - JDBC, Advanced Data Structures</p>
+                            <p>Python - Django, Pandas</p>
                             <div class="wrapper"><span data-width="60"></span></div>
                         </li>
                         <li>
-                            <p>C/C++ - Advanced Data Structures</p>
+                            <p>Java - JDBC, Advanced Data Structures</p>
                             <div class="wrapper"><span data-width="50"></span></div>
                         </li>
                         <li>
-                            <p>PHP</p>
-                            <div class="wrapper"><span data-width="30"></span></div>
+                            <p>C/C++ - Advanced Data Structures</p>
+                            <div class="wrapper"><span data-width="40"></span></div>
+                        </li>
+                        <li>
+                            <p>Ruby - Ruby on Rails</p>
+                            <div class="wrapper"><span data-width="20"></span></div>
                         </li>
                     </ul>
                 </div>
@@ -350,7 +281,7 @@
                     <div class="subtitle">These consist of Web Applications and stand-alone Programs</div>
                     <p>
                       To prevent violations of UCSD's academic integrity policies, I will not link any of the Java or C++
-                      projects. I will try to have them run in this site someday. Check out my Github @ Github.com/Koshinryo
+                      projects, which were assignments for classes. I will try to have them run in this site someday. Check out my Github @ Github.com/paulog11
                     </p>
                 </div>
             </div> <!-- *** end row *** -->
@@ -359,7 +290,7 @@
             <div class="filters">
                 <ul class="wow lightSpeedIn">
                     <li><a href="#" data-filter="*" class="active"><i class="icon-grid"></i></a></li>
-                    <li><a href="#" data-filter=".print">Student Leader Headquarters</a></li>
+                    <li><a href="#" data-filter=".print">Peer Chatroom</a></li>
                     <li><a href="#" data-filter=".icon">PEACH</a></li>
                     <li><a href="#" data-filter=".photography">DeeCaf</a></li>
                     <li><a href="#" data-filter=".web-design">Actor Graphs</a></li>
@@ -527,6 +458,36 @@
     </section> <!-- *** end Portfolio *** -->
 
     <!-- =========================
+       Skills and Projects Expanded
+    ============================== -->
+
+    <!-- <section id="why-choose-us" class="why-choose-us">
+        <div class="container margin-top-large">
+            <h2>
+                Skills and Projects
+                <span class="light-text main-color">Expanded</span>
+            </h2>
+            <div class="line main-bg margin-bottom-large"></div>
+
+            <div class="row text-center"> -->
+
+                <!-- *****  Service Single ***** -->
+                <!-- <div class="col-md-4">
+                    <div class="slideInLeft">
+                        <div class="icon"><i class="fa fa-code"></i></div>
+                        <h4><strong>JavaScript</strong></h4>
+                        <p>I've been learning all things JS since my first web application (DeeCaf).
+                          Through resources like <a href="https://www.codeschool.com/">codeschool</a> and <a href="https://www.udemy.com/courses/">Udemy</a>,
+                          I've gotten a good grasp of vanilla JS topics(hoisting, prototypes, function expressions/declarations), ES2015, and TypeScript. </p>
+                    </div>
+                </div> -->
+
+                <!-- <div class="clearfix"></div> -->
+            <!-- </div>  -->
+        <!-- </div> -->
+    <!-- </section>  -->
+
+    <!-- =========================
        Contact
     ============================== -->
     <section class="send-message main-bg white-color text-center">
@@ -534,6 +495,7 @@
             <i class="fa fa-paper-plane"></i>
         </div>
         <h4>Links: </h4>
+        <p>Github: <a href="https://www.github.com/paulog11">github.com/paulog11</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/paulo-gonzales">linkedin.com/in/paulo-gonzales</a></p>
         <p>Codepen: <a href="http://codepen.io/paulog/">codepen.io/paulog</a></p>
         <p> Email Me at <span class="bold-text">gonzales.paulo19@gmail.com</span> </p>
