changed bio + projects

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="row margin-bottom-medium">
                     <div class="col-md-7">
                         <div class="jumbo-text light-text margin-top-medium wow slideInLeft" data-wow-duration="2s">
-                            <strong class="bold-text">Software Developer</strong> and Systems Builder
+                            <strong class="bold-text">Software Developer</strong> and Data Scientist
                         </div>
                     </div>
                     <div class="col-md-5">
@@ -173,11 +173,11 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <p class="margin-bottom-medium wow slideInUp">I'm currently a new graduate from UC San Diego and I was an Electrical Engineering major for my first two years as a student.
+                <p class="margin-bottom-medium wow slideInUp">I'm a new graduate from UC San Diego and I was an Electrical Engineering major for my first two years as a student.
                   I made the switch to Cognitive Science and Computer Science at the end of my sophomore year, and now I'm specializing in Front-End Development
-                  while also learning Full Stack practices. So for this last year I've been taking classes on database and other back-end applications. I love building systems,
-                  which is why I initially chose to become an electrical engineer, but I eventually found building software (usually web applications) as my real calling! I also
-                  enjoy Data Science, particularly Recommender Systems.
+                  while also learning Full Stack practices and the growing field of Data Science. This last year I took classes on database system principles, server side development, and also recommender systems. 
+                  I'm most proficient in JavaScript and ES6, but I'm quickly taking a liking to Python after using it in my recommender systems course. I'm also proficient in C++ and Java through taking 
+                  data structure classes. I also have experience with WordPress as I've helped build my organization's website and a small blog.
                 </p>
                 <p class="margin-bottom-medium wow slideInUp">I'm originally from the Philippines, moving to the Big Island of Hawaii a week before I turned 10.
                   I lived there for 5 years, moving to New Jersey for half a year, and finally settling in Ventura County here in California. Some of my hobbies include
@@ -205,7 +205,7 @@
                     <ul class="skill-bar">
                         <li>
                             <p>HTML/CSS - Bootstrap</p>
-                            <div class="wrapper"><span data-width="90"></span></div>
+                            <div class="wrapper"><span data-width="75"></span></div>
                         </li>
                         <li>
                             <p>Javascript - ES2015, React/Redux, AngularJS 1&2, Node.js, Express.js, jQuery, D3</p>
@@ -217,7 +217,7 @@
                         </li>
                         <li>
                             <p>Python - Django, Pandas</p>
-                            <div class="wrapper"><span data-width="60"></span></div>
+                            <div class="wrapper"><span data-width="75"></span></div>
                         </li>
                         <li>
                             <p>Java - JDBC, Advanced Data Structures</p>
@@ -225,7 +225,7 @@
                         </li>
                         <li>
                             <p>C/C++ - Advanced Data Structures</p>
-                            <div class="wrapper"><span data-width="40"></span></div>
+                            <div class="wrapper"><span data-width="50"></span></div>
                         </li>
                         <li>
                             <p>Ruby - Ruby on Rails</p>
@@ -305,24 +305,6 @@
             <!-- =========================
                Portfolio item
             ============================== -->
-            <div class="portfolio-item print">
-                <div class="portfolio">
-                    <a href="http://co2017bros.heroku.com/" data-lightbox-gallery="portfolio">
-                        <img src="img/projects/slh1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
-                        <div class="portfolio-overlay hvr-rectangle-out">
-                            <h2 class="margin-bottom-small">
-                                <strong class="white-color bold-text">Peer Page</strong>
-                            </h2>
-                            <h5 style="color: red;"><strong>Currently Outdated and Under Construction</strong></h5>
-                            <div class="button">View Project</div>
-                        </div><!-- END PORTFOLIO OVERLAY -->
-                    </a>
-               </div>
-            </div> <!-- *** end portfolio-item *** -->
-
-            <!-- =========================
-               Portfolio item
-            ============================== -->
             <div class="portfolio-item photography">
                <div class="portfolio">
                   <a href="http://pea-c-h.herokuapp.com/" data-lightbox-gallery="portfolio">
@@ -347,23 +329,6 @@
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">DeeCaf</strong>
-                        </h2>
-                        <div class="button">View Project</div>
-                    </div><!-- END PORTFOLIO OVERLAY -->
-                  </a>
-               </div>
-            </div> <!-- *** end  portfolio-item *** -->
-
-            <!-- =========================
-               Portfolio item
-            ============================== -->
-            <div class="portfolio-item icon">
-               <div class="portfolio">
-                  <a href="img/projects/bible-timeline-init.png" data-lightbox-gallery="portfolio">
-                    <img src="img/projects/bible-timeline-init.png" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
-                    <div class="portfolio-overlay hvr-rectangle-out">
-                        <h2 class="margin-bottom-small">
-                            (TBA) <strong class="white-color bold-text">Bible Timeline</strong>
                         </h2>
                         <div class="button">View Project</div>
                     </div><!-- END PORTFOLIO OVERLAY -->
