--- a/index.html
+++ b/index.html
@@ -335,6 +335,24 @@
                   </a>
                </div>
             </div> <!-- *** end  portfolio-item *** -->
+            
+            <!-- =========================
+               Portfolio item
+            ============================== -->
+            <div class="portfolio-item photography">
+               <div class="portfolio">
+                  <a href="http://unc.acts2fellowship.org/" data-lightbox-gallery="portfolio">
+                    <img src="img/projects/deecaf1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
+                    <div class="portfolio-overlay hvr-rectangle-out">
+                        <h2 class="margin-bottom-small">
+                            <strong class="white-color bold-text">A2F Website</strong>
+                        </h2>
+                        <div class="button">View Project</div>
+                    </div><!-- END PORTFOLIO OVERLAY -->
+                  </a>
+               </div>
+            </div> <!-- *** end  portfolio-item *** -->
+
 
             <!-- =========================
                Portfolio item
