--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="portfolio-item photography">
                <div class="portfolio">
                   <a href="http://unc.acts2fellowship.org/" data-lightbox-gallery="portfolio">
-                    <img src="img/projects/deecaf1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
+                    <img src="img/projects/a2f1.jpg" alt="Portfolio 1"/><!-- END PORTFOLIO IMAGE -->
                     <div class="portfolio-overlay hvr-rectangle-out">
                         <h2 class="margin-bottom-small">
                             <strong class="white-color bold-text">A2F Website</strong>
